--- a/login/package.json
+++ b/login/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.6.3",
+    "mongoose-hidden": "^0.6.4",
     "path": "^0.12.7"
   }
 }
