--- a/bookstore/package.json
+++ b/bookstore/package.json
@@ -16,6 +16,8 @@
     "construx-dustjs": "^1.1.0",
     "construx-less": "^1.0.0",
     "dust-makara-helpers": "^4.1.2",
+    "dustjs-helpers": "^1.7.3",
+    "dustjs-linkedin": "^2.7.4",
     "eslint": "^1.10.3",
     "express": "^4.12.2",
     "express-messages": "^1.0.1",
